# Text-Button-Utility-Project

./: Application.cpp  Application.h  CMakeLists.txt  EventHandler.h  README.md  gameplan.txt  main.cpp
AutoCorrect/: FileReader.cpp  FileReader.h  HeapTree.cpp  HeapTree.h  Suggestion.cpp  Suggestion.h  Word.cpp  Word.h  jNames.txt
Components/: Cursor.cpp  Cursor.h  TextBox.cpp  TextBox.h
Dropdown/: DropdownMenu.cpp  DropdownMenu.h  InputBox.cpp  InputBox.h  Item.cpp  Item.h  ItemList.cpp  ItemList.h
FileTree/: FileItem.cpp  FileItem.h  FileNode.cpp  FileNode.h  FileTree.cpp  FileTree.h  Image.h
GUIComponent/: GUIComponent.h
History/: History.cpp  History.h
KeyShortcuts/: KeyShortcuts.cpp  KeyShortcuts.h
MenuBar/: Menu.cpp  Menu.h  MenuBar.cpp  MenuBar.h
MouseEvents/: MouseEvents.cpp  MouseEvents.h
Snapshot/: History.cpp  History.h  Snapshot.h  SnapshotInterface.h  TextInputSnapshot.cpp  TextInputSnapshot.h
States/: States.cpp  States.h
TextInput/: TextInput.cpp  TextInput.h
Textbox/: Font.cpp  Font.h  Letter.cpp  Letter.h  MultiText.cpp  MultiText.h  Typing.cpp  Typing.h
